--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -2,9 +2,19 @@
     <div class="container">
         <header class="navbar">
             <div class="navbar-inner">
-                <a class="brand" href="/">Andy</a>
-                <li class="active"><a href="{{pathFor 'utilisateursList'  }}">Users <span class="sr-only">(current)</span></a></li>
-            </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav">
+                       <li><a class="brand" href="/">Andy</a></li>
+                        <li class="active"><a href="{{pathFor 'utilisateursList'  }}">
+                            Users<span class="sr-only">(current)</span>
+                            <span><li><a href="{{pathFor 'utilisateurNew'}}">New</a></li></span></a></li>
+                <li class="active"><a href="{{pathFor 'booksList'  }}">Books <span class="sr-only">(current)</span></a></li>
+            </ul>
+                </div>
+                </div>
+
         </header>
         <div id="main" class="row-fluid">
           {{> yield}}
