Rajout de la collection messages

--- a/client/views/utilisateurs/utilisateur_new.html
+++ b/client/views/utilisateurs/utilisateur_new.html
@@ -3,9 +3,6 @@
 
   <title>utilisateurNew</title>
 </head>
-<body>
-
-</body>
 
 
 
@@ -15,18 +12,16 @@
 
 
         <form class="main">
-
-
             <div class="control-group">
-                <label class="control-label" for="name">Nom :</label>
+                
                 <div class="controls">
                     <input name="name" type="text" value="" placeholder="Tapez votre nom !"/>
                 </div>
             </div>
-
+            <br>
             <div class="control-group">
                 <div class="controls">
-                    <input type="submit" value="Submit" class="btn btn-primary"/>
+                    <input type="submit" value="Soumettre" class="btn btn-primary"/>
                 </div>
             </div>
         </form>
